--- a/src/main/resources/templates/register/third-page.html
+++ b/src/main/resources/templates/register/third-page.html
@@ -77,7 +77,7 @@
                                     その他宗教
                                 </label>
                                 <div class="col-12 col-md-8">
-                                    <input type="text" class="form-control" id="otherReligion" 
+                                    <input type="text" class="form-control" id="otherReligion" name="otherReligion"
                                            th:value="${studentData?.otherReligion}"
                                            placeholder="その他の宗教を入力してください">
                                     <div class="invalid-feedback">その他宗教を入力してください</div>
@@ -165,7 +165,7 @@
                                     授業料支払予定日<span class="text-danger ms-1">*</span>
                                 </label>
                                 <div class="col-12 col-md-8">
-                                    <input type="date" class="form-control" id="tuitionPaymentDate" 
+                                    <input type="date" class="form-control" id="tuitionPaymentDate" name="tuitionPaymentDate"
                                            th:value="${studentData?.tuitionPaymentDate}" required>
                                     <div class="invalid-feedback">授業料支払予定日は必須です</div>
                                 </div>
@@ -202,9 +202,8 @@
                                     その他メモ ( 自由形式 )
                                 </label>
                                 <div class="col-12 col-md-8">
-                                    <textarea class="form-control" id="otherMemo" rows="4"
-                                              th:text="${studentData?.otherMemo}"
-                                              placeholder="自由にメモを入力してください"></textarea>
+                                    <textarea class="form-control" id="otherMemo" name="otherMemo" rows="4"
+                                              placeholder="自由にメモを入力してください" th:text="${studentData?.otherMemo}"></textarea>
                                     <div class="invalid-feedback">その他メモを入力してください</div>
                                 </div>
                             </div>
