Integration to main dashboard

--- a/src/main/resources/templates/fragments/dashboard/employee-management.html
+++ b/src/main/resources/templates/fragments/dashboard/employee-management.html
@@ -28,9 +28,9 @@
         Add Employee
       </button>
 
-      <a th:href="@{/students}" class="btn btn-primary">
+      <!-- <a th:href="@{/students}" class="btn btn-primary">
         <i class="fas fa-edit me-2"></i>Update Student
-      </a>
+      </a> -->
     </div>
   </div>
 
