--- a/src/main/resources/templates/layouts/admin-dashboard.html
+++ b/src/main/resources/templates/layouts/admin-dashboard.html
@@ -60,7 +60,7 @@
               <i class="bi bi-calendar2-event"></i>
               <span>Exam Schedule</span>
             </a>
-            <a class="sidebar-link" href="#">
+            <a class="sidebar-link" href="/students">
               <i class="bi bi-people"></i>
               <span>Students</span>
             </a>
